Added codes to MainActivity.java for API data Added Glide and other codes to MainActRCVAdapter.java for API data Added GLide in FullScreenImageViewActivity.java

--- a/app/src/main/res/layout/activity_full_screen_image_view.xml
+++ b/app/src/main/res/layout/activity_full_screen_image_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".FullScreenImageViewActivity">
 
     <com.jsibbold.zoomage.ZoomageView
@@ -11,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/sakib"
-        android:scaleType="centerCrop"
         app:zoomage_restrictBounds="false"
         app:zoomage_animateOnReset="true"
         app:zoomage_autoResetMode="UNDER"
