Added Download & share logo in activity_full_screen_image_view.xml

--- a/app/src/main/res/layout/activity_full_screen_image_view.xml
+++ b/app/src/main/res/layout/activity_full_screen_image_view.xml
@@ -7,17 +7,42 @@
     android:background="@color/black"
     tools:context=".FullScreenImageViewActivity">
 
-    <com.jsibbold.zoomage.ZoomageView
-        android:id="@+id/ivFullScreen"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/sakib"
-        app:zoomage_restrictBounds="false"
-        app:zoomage_animateOnReset="true"
-        app:zoomage_autoResetMode="UNDER"
-        app:zoomage_zoomable="true"
-        app:zoomage_translatable="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/ivDownload"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="30dp"
+            android:src="@drawable/download_img1"
+            app:layout_constraintEnd_toStartOf="@id/ivShare"
+            app:layout_constraintTop_toTopOf="@id/ivShare"
+            app:layout_constraintBottom_toBottomOf="@id/ivShare"/>
+
+        <ImageView
+            android:id="@+id/ivShare"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/share_img"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <com.jsibbold.zoomage.ZoomageView
+            android:id="@+id/ivFullScreen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/sakib"
+            app:zoomage_restrictBounds="false"
+            app:zoomage_animateOnReset="true"
+            app:zoomage_autoResetMode="UNDER"
+            app:zoomage_zoomable="true"
+            app:zoomage_translatable="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
